Bug#6236   Incomplete ALTER TABLE breaks MERGE compatibility   Fix implicit NOT NULL not set on ALTER of PK columns